thay doi giao dien login

--- a/web/languages/en_CA.json
+++ b/web/languages/en_CA.json
@@ -1,6 +1,6 @@
 {
-   "Shinobi": "Shinobi",
-   "superAdminTitle": "Shinobi : Super Admin",
+   "Shinobi": "Ecyber Group",
+   "superAdminTitle": "Ecyber Group : Super Admin",
    "failedLoginText1": "You have failed to login too many times. You must wait 15 minutes before trying again.",
    "failedLoginText2": "Please check your login credentials.",
    "Time Left": "Time Left",
@@ -8,7 +8,7 @@
    "Account Privileges": "Account Privileges",
    "Account Information": "Account Information",
    "subAccountManager": "Sub-Account Manager",
-   "contactAdmin": "Contact the maintainer of your Shinobi installation.",
+   "contactAdmin": "Contact the maintainer of your Ecyber Group installation.",
    "accountAdded": "Account Added",
    "accountAddedText": "Account has been added.",
    "accountDeleted": "Account Deleted",
@@ -35,14 +35,14 @@
    "Remember Me": "Remember Me",
    "Process Already Running": "Process Already Running",
    "Process Not Running": "Process Not Running",
-   "ShinobiHub": "ShinobiHub",
+   "ShinobiHub": "Ecyber Group Hub",
    "Oldest": "Oldest",
    "Newest": "Newest",
    "Title": "Title",
    "Subtitle": "Subtitle",
    "Date Added": "Date Added",
    "Date Updated": "Date Updated",
-   "Public on ShinobiHub": "Public on ShinobiHub",
+   "Public on ShinobiHub": "Public on Ecyber Group Hub",
    "Uploaded Only": "Uploaded Only",
    "Play": "Play",
    "Pause": "Pause",
@@ -460,7 +460,7 @@
    "API Key Added": "API Key Added",
    "APIKeyAddedText": "You may use this key now.",
    "Update": "Update",
-   "updateNotice1": "Updating Shinobi means overwriting files. If you have modified any files yourself you should update Shinobi manually. Your configurations and video files will not be modified.",
+   "updateNotice1": "Updating Ecyber Group means overwriting files. If you have modified any files yourself you should update Ecyber Group manually. Your configurations and video files will not be modified.",
    "Update to Master": "Update to Master",
    "Update to Development": "Update to Development",
    "Filters Updated": "Filters Updated",
@@ -480,7 +480,7 @@
    "Name cannot be empty.": "Name cannot be empty.",
    "Start Time cannot be empty.": "Start Time cannot be empty.",
    "Must be atleast one row": "Must be atleast one row",
-   "InvalidJSONText": "Please ensure this is a valid JSON string for Shinobi monitor configuration.",
+   "InvalidJSONText": "Please ensure this is a valid JSON string for Ecyber Group monitor configuration.",
    "Passwords don't match": "Passwords don't match",
    "Email address is in use.": "Email address is in use.",
    "Group Key is in use.": "Group Key is in use.",
@@ -541,10 +541,10 @@
    "Grid": "Grid",
    "Open": "Open",
    "Live Grid": "Live Grid",
-   "liveGridDescription": "Live Grid is the multiple stream display for Shinobi. This viewing method is mainly designed for desktop.",
+   "liveGridDescription": "Live Grid is the multiple stream display for Ecyber Group. This viewing method is mainly designed for desktop.",
    "accountSettingsDescription": "Manage your Profile and set options like Max Storage Amount and Max Number of Days to keep videos.",
    "eventFiltersDescription": "Setup filters for when Events occur.",
-   "monitorConfigFinderDescription": "This tool will help you search for configurations for cameras posted by the community. All hosted on <a href='https://hub.shinobi.video/explore' target='_blank'>ShinobiHub</a>. You can post yours too, it would really help the community :)",
+   "monitorConfigFinderDescription": "This tool will help you search for configurations for cameras posted by the community. All hosted on <a href='/' target='_blank'>Ecyber Group Hub</a>. You can post yours too, it would really help the community :)",
    "Saved": "Saved",
    "Not Saved": "Not Saved",
    "Not Connected": "Not Connected",
@@ -568,12 +568,12 @@
    "Plugin Manager": "Plugin Manager",
    "IdentityText1": "This is how the system will identify the data for this stream. You cannot change the <b>Monitor ID</b> once you have pressed save. If you want you can make the <b>Monitor ID</b> more human readable before you continue.",
    "IdentityText2": "You can duplicate a monitor by modifying the <b>Monitor ID</b> then pressing save. You <b>cannot</b> use the ID of a monitor that already exists or it will save over that monitor's database information.",
-   "opencvCascadesText": "If you see nothing here then just download this package of <a href=\"https://cdn.shinobi.video/weights/cascades.zip\">cascades</a>. Drop them into <code>plugins/opencv/cascades</code> then press refresh <i class=\"fa fa-retweet\"></i>.",
+   "opencvCascadesText": "If you see nothing here then just download this package of <a href=\"/\">cascades</a>. Drop them into <code>plugins/opencv/cascades</code> then press refresh <i class=\"fa fa-retweet\"></i>.",
    "noSpecialCharacters": "No spaces or special characters.",
    "NotesPlacholder": "Comments you want to leave for this cameras settings.",
-   "InputText1": "This section tells Shinobi how to consume a stream. For optimal performance try tuning your camera's internal settings. To find your camera you can use the <b>built in ONVIF Scanner</b> of Shinobi. To open the ONVIF Scanner click your username in the top left and then ONVIF.",
-   "InputText2": "Learn about configuring and tuning your cameras <a target='_blank' href='https://shinobi.video/docs/configure'>here</a>.",
-   "InputText3": "If you need help figuring out what input type your camera is you can take a look in the <a href=\"http://shinobi.video/docs/cameras\" target=\"_blank\">Camera URLs List</a> on the Shinobi website.",
+   "InputText1": "This section tells Ecyber Group how to consume a stream. For optimal performance try tuning your camera's internal settings. To find your camera you can use the <b>built in ONVIF Scanner</b> of Ecyber Group. To open the ONVIF Scanner click your username in the top left and then ONVIF.",
+   "InputText2": "Learn about configuring and tuning your cameras <a target='_blank' href='/'>here</a>.",
+   "InputText3": "If you need help figuring out what input type your camera is you can take a look in the <a href=\"/\" target=\"_blank\">Camera URLs List</a> on the Ecyber Group website.",
    "StreamText": "<p>This section will designate the primary method of streaming out and its settings. This stream will be displayed in the dashboard. If you choose to use HLS, JPEG, or MJPEG then you can consume the stream through other programs.</p><p class=\"h_st_input h_st_jpeg\">Using JPEG stream essentially turns off the primary stream and uses the snapshot bin to get frames.</p>",
    "DetectorText": "<p>When the Width and Height boxes are shown you should set them to 640x480 or below. This will optimize the read speed of frames.</p>",
    "RecordingText": "It is recommended that you set <b>Record File Type</b> to <b class=\"h_t_input h_t_jpeg h_t_socket\">WebM</b><b class=\"h_t_input h_t_mjpeg h_t_h264 h_t_hls h_t_mp4 h_t_local\">MP4</b> and <b>Video Codec</b> to <b class=\"h_t_input h_t_jpeg h_t_socket\">libvpx</b><b class=\"h_t_input h_t_h264 h_t_hls h_t_mp4\">copy or </b><b class=\"h_t_input h_t_mjpeg h_t_h264 h_t_hls h_t_mp4 h_t_local\">libx264</b> because your <b>Input Type</b> is set to <b class=\"h_t_text\"></b>.",
@@ -646,8 +646,8 @@
    "Automatic Field Fill": "Automatic Field Fill",
    "Automatic Codec Repair": "Automatic Codec Repair",
    "Field Missing Value": "Field Missing Value",
-   "fieldMissingValueText1": "Your camera is providing MJPEG stream data. You need to set the Monitor Capture Rate. Shinobi will attempt to detect it and fill it automatically.",
-   "codecMismatchText1": "Your camera is providing H.265 (HEVC) stream data and you are using copy as the Video Codec for the Stream section. Your stream from Shinobi may not appear on devices that cannot use this codec. The Shinobi Mobile App can view these streams.",
+   "fieldMissingValueText1": "Your camera is providing MJPEG stream data. You need to set the Monitor Capture Rate. Ecyber Group will attempt to detect it and fill it automatically.",
+   "codecMismatchText1": "Your camera is providing H.265 (HEVC) stream data and you are using copy as the Video Codec for the Stream section. Your stream from Ecyber Group may not appear on devices that cannot use this codec. The Ecyber Group Mobile App can view these streams.",
    "codecMismatchText2": "Your selected Video Codec is not applicable. Your camera is providing MJPEG stream data and you are using copy as the Video Codec for the Stream section. Changed the Stream Type to MJPEG.",
    "codecMismatchText3": "Your selected Video Codec is not applicable. Your camera is providing MJPEG stream data and you are using copy as the Video Codec for the Recording section. Changed the Video Codec to libx264.",
    "Delete Monitor States Preset": "Delete Monitor States Preset",
@@ -762,7 +762,7 @@
    "H.264 / H.265 / H.265+": "H.264 / H.265 / H.265+",
    "HLS (.m3u8)": "HLS (.m3u8)",
    "MPEG-4 (.mp4 / .ts)": "MPEG-4 (.mp4 / .ts)",
-   "Shinobi Streamer": "Shinobi Streamer",
+   "Shinobi Streamer": "Ecyber Group Streamer",
    "Dashcam (Streamer v2)": "Dashcam (Streamer v2)",
    "Local": "Local",
    "Raw": "Raw",
@@ -838,8 +838,8 @@
    "Query": "Query",
    "Request": "Request",
    "System": "System",
-   "restartRequired": "Restart of Shinobi Core is required for changes to take effect.",
-   "Shinobi Ordered to Update": "Shinobi Update Completed",
+   "restartRequired": "Restart of Ecyber Group Core is required for changes to take effect.",
+   "Shinobi Ordered to Update": "Ecyber Group Update Completed",
    "Restart Core": "Restart Core",
    "Restart CRON": "Restart CRON",
    "Flush PM2 Logs": "Flush PM2 Logs",
@@ -955,7 +955,7 @@
    "startUpText2": "all users checked, wait to close open files and remove files over user limit",
    "startUpText3": "waiting to give unfinished video check some time. 3 seconds.",
    "startUpText4": "Starting Monitors... Please Wait...",
-   "startUpText5": "Shinobi is ready.",
+   "startUpText5": "Ecyber Group is ready.",
    "startUpText6": "Orphaned Videos Found and Inserted",
    "Migrator": "Migrator",
    "Thumbnail": "Thumbnail",
@@ -1083,7 +1083,7 @@
    "flv": "flv",
    "FLV": "FLV",
    "FLV Stream Type": "FLV Stream Type",
-   "Link Shinobi": "Link Shinobi",
+   "Link Shinobi": "Link Ecyber Group",
    "Show Stream HUD":"Show Stream HUD",
    "Call Method":"Call Method",
    "Gender":"Gender",
