chuyen tieng anh thanh tieng viet lan 2

--- a/web/languages/vi.json
+++ b/web/languages/vi.json
@@ -86,34 +86,34 @@
     "Recording FPS": "Recording FPS",
     "Input Selector": "Input Selector",
     "Input Settings": "Input Settings",
-    "Connection": "Connection",
+    "Connection": "Kết nối",
     "Video Set": "Video Set",
     "notEnoughFramesText1": "Not Enough Frames for compilation.",
     "Allow API Trigger": "Allow API Trigger",
     "When Detector is Off": "When Detector is Off",
     "When Detector is On": "When Detector is On",
-    "January" : "January",
-    "February" : "February",
-    "March" : "March",
-    "April" : "April",
-    "May": "May",
-    "June" : "June",
-    "July" : "July",
-    "August" : "August",
-    "September" : "September",
-    "October" : "October",
-    "November" : "November",
-    "December" : "December",
-    "Sunday": "Sunday",
-    "Monday": "Monday",
-    "Tuesday": "Tuesday",
-    "Wednesday": "Wednesday",
-    "Thursday": "Thursday",
-    "Friday": "Friday",
-    "Saturday": "Saturday",
-    "Today": "Today",
-    "Always": "Always",
-    "Never": "Never",
+    "January" : "Tháng 1",
+    "February" : "Tháng 2",
+    "March" : "Tháng 3",
+    "April" : "Tháng 4",
+    "May": "Tháng 5",
+    "June" : "Tháng 6",
+    "July" : "Tháng 7",
+    "August" : "Tháng 8",
+    "September" : "Tháng 9",
+    "October" : "Tháng 10",
+    "November" : "Tháng 11",
+    "December" : "Tháng 12",
+    "Sunday": "Chủ nhật",
+    "Monday": "Thứ hai",
+    "Tuesday": "Thứ ba",
+    "Wednesday": "Thứ tư",
+    "Thursday": "Thứ năm",
+    "Friday": "Thứ sáu",
+    "Saturday": "Thứ bảy",
+    "Today": "Hôm nay",
+    "Always": "Luôn luôn",
+    "Never": "Không",
     "API": "API",
     "ONVIF": "ONVIF",
     "Alternate Logins": "Alternate Logins",
@@ -121,7 +121,7 @@
     "Unlinked": "Unlinked",
     "Unlink Login": "Unlink Login?",
     "lastLogin": "Last Login",
-    "Home": "Home",
+    "Home": "Trang chủ",
     "alreadyLinked": "Already Linked to an Account",
     "Link Google Account": "Link Google Account",
     "Link LDAP Account": "Link LDAP Account",
@@ -157,21 +157,21 @@
     "Reconnect Stream": "Reconnect Stream",
     "Order Streams": "Order Streams",
     "Hide Notes": "Hide Notes",
-    "Example": "Example",
-    "Logout": "Logout",
-    "Closed": "Closed",
-    "Ended": "Ended",
-    "Options": "Options",
-    "Started": "Started",
-    "Monitor": "Monitor",
+    "Example": "Ví dụ",
+    "Logout": "Đăng xuất",
+    "Closed": "Đóng",
+    "Ended": "Mở",
+    "Options": "Lựa chọn",
+    "Started": "Bắt đầu",
+    "Monitor": "Camera",
     "Filename": "Filename",
     "Size (mb)": "Size (mb)",
-    "Watch": "Watch",
-    "Download": "Download",
+    "Watch": "Xem",
+    "Download": "Tải xuống",
     "videoBuildingText1": "Video is currently building. Check again later.",
     "Build Video": "Build Video",
-    "Delete": "Delete",
-    "Fix": "Fix",
+    "Delete": "Xóa",
+    "Fix": "Sửa",
     "Use HTML5 Play Method": "Use HTML5 Play Method",
     "Connection timed out": "Connection timed out",
     "skipPingText1": "Try setting \"Skip Ping\" to Yes.",
@@ -202,21 +202,21 @@
     "Build": "Build",
     "Building": "Building",
     "Started Building": "Started Building",
-    "Add": "Add",
-    "Save": "Save",
-    "Save New": "Save New",
-    "Save Changes": "Save Changes",
-    "Close": "Close",
-    "Don't Show for 1 Week": "Don't Show for 1 Week",
-    "Secure": "Secure",
-    "Check": "Check",
-    "Stop": "Stop",
-    "deleteApiKey": "Delete API Key",
-    "deleteApiKeyText": "Do you want to delete this API key? You cannot recover it.",
+    "Add": "Thêm mới",
+    "Save": "Lưu",
+    "Save New": "Lưu mới",
+    "Save Changes": "Lưu thay đổi",
+    "Close": "Đóng",
+    "Don't Show for 1 Week": "Không show trong 1 tuần",
+    "Secure": "Bảo mật",
+    "Check": "Kiểm tra",
+    "Stop": "Dừng",
+    "deleteApiKey": "Xóa API Key",
+    "deleteApiKeyText": "Bạn muốn xóa API key?",
     "Enter at least one IP": "Enter at least one IP",
-    "Confirm": "Confirm",
-    "Enable": "Enable",
-    "Enabled": "Enabled",
+    "Confirm": "Xác nhận",
+    "Enable": "Bật",
+    "Enabled": "Đã bật",
     "API Key": "API Key",
     "API Keys": "API Keys",
     "Group Key": "Group Key",
@@ -257,12 +257,12 @@
     "On Unexpected Exit": "On Unexpected Exit",
     "Bandwidth": "Bandwidth",
     "Methods": "Methods",
-    "Notifications": "Notifications",
-    "Monitor ID": "Monitor ID",
-    "Type": "Type",
-    "File Type": "File Type",
-    "Filesize": "Filesize",
-    "Video Status": "Video Status",
+    "Notifications": "Thông báo",
+    "Monitor ID": "Camera ID",
+    "Type": "Loại",
+    "File Type": "Loại file",
+    "Filesize": "Kích cỡ ",
+    "Video Status": "Trạng thái video",
     "Custom Auto Load": "Custom Auto Load",
     "Easy Remote Access (P2P)": "Easy Remote Access (P2P)",
     "P2P Settings Applied": "P2P Settings Applied",
@@ -324,7 +324,7 @@
     "ONVIF Scanner": "Tìm kiếm theo chuẩn ONVIF",
     "ONVIFEventsNotAvailable": "ONVIF Events not Available",
     "ONVIFEventsNotAvailableText1": "This service may not be available for this camera or ONVIF has not initialized yet.",
-    "ONVIFnotCompliantProfileT": "Camera is not ONVIF Profile T Compliant",
+    "ONVIFnotCompliantProfileT": "Camera không hỗ trợ chuẩn ONVIF",
     "ONVIFErr400": "Found ONVIF port but authorization failed when retrieving the Stream URL. Check username and password used for scan. Make sure your camera time and server time are synced.",
     "ONVIFErr405": "Method Not Allowed. Check username and password used for scan.",
     "ONVIFErr404": "Not Found. This may just be the web panel for a network device.",
@@ -350,9 +350,9 @@
     "Regions": "Regions",
     "Again": "Again",
     "Landing Page": "Landing Page",
-    "Account Info": "Account Info",
+    "Account Info": "Thông tin tài khoản",
     "blankPassword": "Leave blank to keep same password",
-    "2-Factor Authentication": "2-Factor Authentication",
+    "2-Factor Authentication": "Xác thực 2 lớp",
     "Use Max Storage Amount": "Use Max Storage Amount",
     "Max Storage Amount": "Max Storage Amount",
     "Video Share": "Video Share",
@@ -411,9 +411,9 @@
     "All Monitors and Privileges": "All Monitors and Privileges",
     "Permissions": "Permissions",
     "Time-lapse Tool": "Time-lapse Tool",
-    "total": "total",
+    "total": "tổng",
     "MB": "MB",
-    "Calendar": "Calendar",
+    "Calendar": "Lịch",
     "Leave blank for random.": "Leave blank for random.",
     "Currently viewing": "Currently viewing",
     "Status Indicator": "Status Indicator",
@@ -424,7 +424,7 @@
     "Monitor Settings": "Monitor Settings",
     "Enlarge": "Enlarge",
     "Fullscreen": "Fullscreen",
-    "Value": "Value",
+    "Value": "Giá trị",
     "Idle": "Idle",
     "Disabled": "Disabled",
     "Record": "Record",
@@ -432,7 +432,7 @@
     "Watch-Only": "Watch-Only",
     "Set Mode": "Set Mode",
     "Toggle Sidebar": "Toggle Sidebar",
-    "Add Monitor": "Add Monitor",
+    "Add Monitor": "Thêm camera",
     "Start Recording": "Start Recording",
     "Set to Watch Only": "Set to Watch Only",
     "Save as": "Save as",
@@ -455,11 +455,11 @@
     "DeleteVideoMsg": "Do you want to delete this video? You cannot recover it.",
     "DeleteThisMsg": "Do you want to delete this? You cannot recover it.",
     "dropBoxSuccess": "Success! Files saved to your Dropbox.",
-    "API Key Deleted": "API Key Deleted",
+    "API Key Deleted": "API Key đã được xóa",
     "APIKeyDeletedText": "Key has been deleted. It will no longer work.",
-    "API Key Added": "API Key Added",
+    "API Key Added": "API Key đã được thêm vào",
     "APIKeyAddedText": "You may use this key now.",
-    "Update": "Update",
+    "Update": "Cập nhật",
     "updateNotice1": "Updating Ecyber Group means overwriting files. If you have modified any files yourself you should update Ecyber Group manually. Your configurations and video files will not be modified.",
     "Update to Master": "Update to Master",
     "Update to Development": "Update to Development",
@@ -472,17 +472,17 @@
     "ImportMultiMonitorConfigurationText": "Doing this will overrwrite any monitors with IDs existing in the import file.",
     "ImportMonitorConfigurationText": "Doing this will overrwrite any changes currently not saved. Imported changes will only be applied when you press <b>Save</b>.",
     "Paste JSON here.": "Paste JSON here or upload file.",
-    "Delete Monitor": "Delete Monitor",
+    "Delete Monitor": "Xóa camera",
     "DeleteMonitorText": "Do you want to delete this monitor? You cannot recover it. You can choose for the files to remain in the filesystem. If you choose to recreate a monitor with the same ID the videos and events will become visible in the dashboard.",
     "DeleteMonitorsText": "Do you want to delete these monitors? You cannot recover them. You can choose to keep the files for these IDs in the filesystem. If you choose to recreate a monitor with one of the IDs the videos and events will become visible in the dashboard.",
-    "Invalid JSON": "Invalid JSON",
-    "Invalid Data": "Invalid Data",
-    "Name cannot be empty.": "Name cannot be empty.",
-    "Start Time cannot be empty.": "Start Time cannot be empty.",
+    "Invalid JSON": "Sai định dạng Json",
+    "Invalid Data": "Thiếu dữ liệu",
+    "Name cannot be empty.": "Tên camera không được để trống.",
+    "Start Time cannot be empty.": "Thời gian bắt đầu không được để trống.",
     "Must be atleast one row": "Must be atleast one row",
     "InvalidJSONText": "Please ensure this is a valid JSON string for Ecyber Group monitor configuration.",
-    "Passwords don't match": "Passwords don't match",
-    "Email address is in use.": "Email address is in use.",
+    "Passwords don't match": "Mật khẩu không đúng",
+    "Email address is in use.": "Email đã tồn tại.",
     "Group Key is in use.": "Group Key is in use.",
     "Create Sub-Accounts at /admin": "Create Sub-Accounts at /admin",
     "No Events found for this video": "No Events found for this video",
@@ -498,20 +498,20 @@
     "Stream in Background": "Stream in Background",
     "in": "in",
     "ago": "ago",
-    "a few seconds": "a few seconds",
-    "a minute": "a minute",
-    "minutes": "minutes",
-    "an hour": "an hour",
-    "hours": "hours",
-    "a day": "a day",
-    "days": "days",
-    "Days": "Days",
+    "a few seconds": "trong vài giây",
+    "a minute": "1 phút",
+    "minutes": "phút",
+    "an hour": "1 giờ",
+    "hours": "giờ",
+    "a day": "1 ngày",
+    "days": "ngày",
+    "Days": "Ngày",
     "a month": "a month",
-    "months": "months",
-    "a year": "a year",
-    "years": "years",
-    "Identity": "Identity",
-    "Input": "Input",
+    "months": "tháng",
+    "a year": "1 năm",
+    "years": "năm",
+    "Identity": "Định danh",
+    "Input": "Đầu vào",
     "Input Feed": "Input Feed",
     "Timezone": "Timezone",
     "Timezone Offset": "Timezone Offset",
@@ -520,7 +520,7 @@
     "Stream Watermark": "Stream Watermark",
     "JPEG API": "JPEG API",
     "Raw H.264 Stream": "Raw H.264 Stream",
-    "Recording": "Recording",
+    "Recording": "Lưu trữ",
     "Recording Timestamp": "Recording Timestamp",
     "Recording Watermark": "Recording Watermark",
     "Timelapse Watermark": "Timelapse Watermark",
@@ -547,7 +547,7 @@
     "monitorConfigFinderDescription": "This tool will help you search for configurations for cameras posted by the community. All hosted on <a href='/' target='_blank'>Ecyber Group Hub</a>. You can post yours too, it would really help the community :)",
     "Saved": "Saved",
     "Not Saved": "Not Saved",
-    "Not Connected": "Not Connected",
+    "Not Connected": Không có kết nối",
     "License Plate Detector": "License Plate Detector",
     "OpenCV Cascades": "OpenCV Cascades",
     "Refresh List of Cascades": "Refresh List of Cascades",
@@ -566,7 +566,7 @@
     "Creation Interval": "Creation Interval",
     "Plugin": "Plugin",
     "Plugin Manager": "Plugin Manager",
-    "IdentityText1": "This is how the system will identify the data for this stream. You cannot change the <b>Monitor ID</b> once you have pressed save. If you want you can make the <b>Monitor ID</b> more human readable before you continue.",
+    "IdentityText1": "<b>Camera ID</b> được phép thay đổi cho dễ nhớ (ví dụ giám sát 1, giám sát 2,...) nhưng phải là duy nhất trong hệ thống.",
     "IdentityText2": "You can duplicate a monitor by modifying the <b>Monitor ID</b> then pressing save. You <b>cannot</b> use the ID of a monitor that already exists or it will save over that monitor's database information.",
     "opencvCascadesText": "If you see nothing here then just download this package of <a href=\"/\">cascades</a>. Drop them into <code>plugins/opencv/cascades</code> then press refresh <i class=\"fa fa-retweet\"></i>.",
     "noSpecialCharacters": "No spaces or special characters.",
@@ -580,14 +580,14 @@
     "'Already Installing...'": "'Already Installing...'",
     "Time Created": "Time Created",
     "Last Modified": "Last Modified",
-    "Mode": "Mode",
+    "Mode": "Chế độ",
     "Run Installer": "Run Installer",
-    "Install": "Install",
-    "Enable": "Enable",
-    "Disable": "Disable",
-    "Delete": "Delete",
+    "Install": "Cài đặt",
+    "Enable": "Bật",
+    "Disable": "Tắt",
+    "Delete": "Xóa",
     "Add All": "Add All",
-    "Name": "Name",
+    "Name": "Tên",
     "Skip Ping": "Skip Ping",
     "Retry Connection": "Retry Connection <small>Number of times allowed to fail</small>",
     "Notes": "Notes",
@@ -595,9 +595,9 @@
     "Connection Type": "Connection Type",
     "RTSP Transport": "RTSP Transport",
     "Protocol": "Protocol",
-    "Host": "Host",
+    "Host": "Máy chủ",
     "Force Port": "Force Port",
-    "Path": "Path",
+    "Path": "ĐƯờng dẫn",
     "Monitor Capture Rate": "Monitor Capture Rate <small>(FPS)</small>",
     "Analyzation Duration": "Analyzation Duration",
     "Probe Size": "Probe Size",
