thay doi giao dien them, sua camera

--- a/web/languages/vi.json
+++ b/web/languages/vi.json
@@ -86,7 +86,7 @@
     "Recording FPS": "Recording FPS",
     "Input Selector": "Input Selector",
     "Input Settings": "Input Settings",
-    "Connection": "Kết nối",
+    "Connection": "Thông tin link camera",
     "Video Set": "Video Set",
     "notEnoughFramesText1": "Not Enough Frames for compilation.",
     "Allow API Trigger": "Allow API Trigger",
@@ -138,7 +138,7 @@
     "Schedules": "Schedules",
     "Monitor States and Schedules": "Monitor States and Schedules",
     "Filters": "Filters",
-    "Full URL Path": "Full URL Path",
+    "Full URL Path": "Nhập link đầy đủ",
     "Streamed Logs": "Streamed Logs",
     "Saved Logs": "Saved Logs",
     "Logs": "Logs",
@@ -510,12 +510,12 @@
     "months": "tháng",
     "a year": "1 năm",
     "years": "năm",
-    "Identity": "Định danh",
+    "Identity": "Tên camera",
     "Input": "Đầu vào",
     "Input Feed": "Input Feed",
     "Timezone": "Timezone",
     "Timezone Offset": "Timezone Offset",
-    "Stream": "Stream",
+    "Stream": "Chuẩn kết nối",
     "Stream Timestamp": "Stream Timestamp",
     "Stream Watermark": "Stream Watermark",
     "JPEG API": "JPEG API",
@@ -547,7 +547,7 @@
     "monitorConfigFinderDescription": "This tool will help you search for configurations for cameras posted by the community. All hosted on <a href='/' target='_blank'>Ecyber Group Hub</a>. You can post yours too, it would really help the community :)",
     "Saved": "Saved",
     "Not Saved": "Not Saved",
-    "Not Connected": Không có kết nối",
+    "Not Connected": "Không có kết nối",
     "License Plate Detector": "License Plate Detector",
     "OpenCV Cascades": "OpenCV Cascades",
     "Refresh List of Cascades": "Refresh List of Cascades",
@@ -587,7 +587,7 @@
     "Disable": "Tắt",
     "Delete": "Xóa",
     "Add All": "Add All",
-    "Name": "Tên",
+    "Name": "Đặt tên camera",
     "Skip Ping": "Skip Ping",
     "Retry Connection": "Retry Connection <small>Number of times allowed to fail</small>",
     "Notes": "Notes",
@@ -601,7 +601,7 @@
     "Monitor Capture Rate": "Monitor Capture Rate <small>(FPS)</small>",
     "Analyzation Duration": "Analyzation Duration",
     "Probe Size": "Probe Size",
-    "Stream Type": "Stream Type",
+    "Stream Type": "Chọn chuẩn",
     "# of Allow MJPEG Clients": "# of Allow MJPEG Clients <small>0 for infinite</small>",
     "hlsOptions": "HLS Options",
     "hlsOptionsInvalid": "HLS Options are Invalid",
@@ -960,7 +960,7 @@
     "Migrator": "Migrator",
     "Thumbnail": "Thumbnail",
     "Host Type": "Host Type",
-    "Edit": "Edit",
+    "Edit": "Cập nhật",
     "Next Video": "Next Video",
     "Previous Video": "Previous Video",
     "Please Wait...": "Please Wait...",
