an bot danh sach chuc nang tren thanh tai khoan

--- a/web/languages/vi.json
+++ b/web/languages/vi.json
@@ -76,7 +76,7 @@
     "Viewing Server Stats": "Viewing Server Stats",
     "Connected Users": "Connected Users",
     "Registered Servers": "Registered Servers",
-    "Open All Monitors": "Open All Monitors",
+    "Open All Monitors": "Xem tất cả",
     "Accounts": "Accounts",
     "Settings": "Settings",
     "Count Objects only inside Regions": "Count Objects only inside Regions",
@@ -182,7 +182,7 @@
     "Disable Nightvision": "Disable Nightvision",
     "Date": "Date",
     "Current": "Current",
-    "Monitors": "Monitors",
+    "Monitors": "Quản lý camera",
     "Video": "Video",
     "Themes": "Themes",
     "Videos": "Videos",
@@ -436,7 +436,7 @@
     "Start Recording": "Start Recording",
     "Set to Watch Only": "Set to Watch Only",
     "Save as": "Save as",
-    "Add New": "Add New",
+    "Add New": "Thêm mới",
     "Merge and Download": "Merge and Download",
     "Zip and Download": "Zip and Download",
     "Merge Selected Videos": "Merge Selected Videos",
@@ -558,7 +558,7 @@
     "Detector Recording Process Exited Prematurely. Restarting.": "Detector Recording Process Exited Prematurely. Restarting.",
     "Detector Recording Complete": "Detector Recording Complete",
     "Clear Recorder Process": "Clear Recorder Process",
-    "Clear": "Clear",
+    "Clear": "Xóa trước khi thêm",
     "Logging": "Logging",
     "Timelapse": "Timelapse",
     "Nothing exists": "Nothing exists",
