add monitor grid

--- a/web/languages/en_CA.json
+++ b/web/languages/en_CA.json
@@ -77,6 +77,11 @@
    "Connected Users": "Connected Users",
    "Registered Servers": "Registered Servers",
    "Open All Monitors": "Open All Monitors",
+   "1x1 Monitor": "1x1 Monitor",
+   "2x2 Monitors": "2x2 Monitors",
+   "3x3 Monitors": "3x3 Monitors",
+   "4x4 Monitors": "4x4 Monitors",
+   "4x8 Monitors": "4x8 Monitors",
    "Accounts": "Accounts",
    "Settings": "Settings",
    "Count Objects only inside Regions": "Count Objects only inside Regions",
