--- a/web/languages/vi.json
+++ b/web/languages/vi.json
@@ -77,6 +77,11 @@
     "Connected Users": "Connected Users",
     "Registered Servers": "Registered Servers",
     "Open All Monitors": "Xem tất cả",
+    "1x1 Monitor": "Xem 1 camera",
+    "2x2 Monitors": "Xem 2x2 camera",
+    "3x3 Monitors": "Xem 3x3 camera",
+    "4x4 Monitors": "Xem 4x4 camera",
+    "4x8 Monitors": "Xem 4x8 camera",
     "Accounts": "Accounts",
     "Settings": "Settings",
     "Count Objects only inside Regions": "Count Objects only inside Regions",
